--- a/Tarif/login_page/styles/dye-pattern.css
+++ b/Tarif/login_page/styles/dye-pattern.css
@@ -1,7 +1,7 @@
 body {
     min-height: 100vh;
     margin: 0;
-    font-family: 'Montserrat', Arial, sans-serif;
+    font-family: Verdana, Arial, sans-serif;
     background: radial-gradient(circle at 20% 20%, #0a9bcd 100%);
     display: flex;
     flex-direction: column;
